# agentic-social

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/social/: crew.py  main.py
src/social/config/: agents.yaml  tasks.yaml
